--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<nav>
 		<div class="outer-content filter">
 			<ul class="filter" id="navlist">
-				<li>Basic Tools</li>
+				<li><button id="nav-button">Basic Tools</button></li>
 			</ul>
 		</div>
 	</nav>
