--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div class="outer-content" id="logo">
-			<h1><strong>The Homeowner's Supply List</strong></h1>
+			<h1><strong>The Homeowner's Supply List</strong><img src="Images/houselogo1.png"></h1>
 		</div>
 	</header>
 
